# Browser-Intelligence-RAG

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: bm25_ids.json
data/bm25/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
eval/: README.md  run_hf_eval.py
extension/: manifest.json
extension/css/: highlight.css  popup.css
extension/html/: popup.html
extension/js/: background.js  content.js  popup.js
extension/viewer/: claude_viewer.html  pdf_viewer.html  pdf_viewer.js
src/: api.py  bm25.py  config.py  embed.py  ingest_browser.py  ingest_claude.py  ingest_html.py  ingest_pdf.py  logger.py  query.py  store.py  utils.py
tests/: test_pipeline.py
